--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "fomet_app",
+    "name": "FometApp",
     "short_name": "fomet_app",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FFFFFF",
+    "theme_color": "#80C41B",
+    "description": "Official application of the Fomet SpA company.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
