--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "fometapp.buggiani.app.flutter_app" "\0"
-            VALUE "FileDescription", "fomet_app" "\0"
+            VALUE "FileDescription", "FometApp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "fomet_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 fometapp.buggiani.app.flutter_app. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 SBL Service. All rights reserved." "\0"
             VALUE "OriginalFilename", "fomet_app.exe" "\0"
-            VALUE "ProductName", "fomet_app" "\0"
+            VALUE "ProductName", "FometApp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
