--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fomet_app
-description: "Official application of the Fomet SpA company"
+description: "Official application of the Fomet SpA company."
 
 publish_to: 'none'
 
@@ -19,6 +19,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svg/
