--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+    
+  flutter_svg: ^2.0.9
+  
+  flutter_web_plugins:
+    sdk: flutter
+
+  fomet_ui:
+    path: packages/fomet_ui
+  
+  go_router: ^12.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -19,5 +32,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  generate: true
+  
   assets:
     - assets/svg/
