--- a/packages/fomet_ui/pubspec.yaml
+++ b/packages/fomet_ui/pubspec.yaml
@@ -1,11 +1,10 @@
 name: fomet_ui
-description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+description: "Component library of the FometApp application."
+version: 1.0.0
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.2.3
+  flutter: ^3.16.0
 
 dependencies:
   flutter:
