--- a/packages/fomet_api_client/pubspec.yaml
+++ b/packages/fomet_api_client/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fomet_api_client
-description: A starting point for Dart libraries or applications.
+description: The HTTP client of the FometApp application.
 version: 1.0.0
 
 environment:
@@ -10,4 +10,4 @@ dependencies:
   xml: ^6.5.0
 
 dev_dependencies:
-  test: ^1.24.0
+  test: ^1.25.0
