--- a/.github/workflows/fomet_app_ci.yml
+++ b/.github/workflows/fomet_app_ci.yml
@@ -11,11 +11,14 @@ jobs:
     name: FometApp action
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - uses: kuhnroyal/flutter-fvm-config-action@v2
+        id: fvm-config-action
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.4'
-          channel: 'stable'
+          flutter-version: ${{ steps.fvm-config-action.outputs.FLUTTER_VERSION }}
+          channel: ${{ steps.fvm-config-action.outputs.FLUTTER_CHANNEL }}
 
       - name: Installing dependencies
         run: flutter pub get
@@ -29,8 +32,8 @@ jobs:
       - name: Runing tests
         run: flutter test --coverage
 
-      - name: Making sure that code coverage is at least 85
+      - name: Making sure that code coverage is at least 90
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
-          min_coverage: 1
+          min_coverage: 30
           
